package com.luminaria.model.enums;

public enum TipoSoquete {
    E27, E14, E40, GU10, G4
}
